# vike-trader-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-02-economic-calendar.md  2026-06-04-chart-indicators-deferred.md  2026-06-04-chart-indicators-tv-parity.md
docs/superpowers/specs/: 2026-06-02-economic-calendar-design.md  2026-06-04-chart-indicators-deferred-design.md  2026-06-04-chart-indicators-tv-parity-design.md
examples/: telemetry_receiver.py
scripts/: bench_duckdb_phase0.py  bench_fastsim.py  fetch_history.py  screenshot.py  seed_binance.py  validate_demo.py  verify_shot.py
scripts/ops/prod1-telemetry/: README.md  app.py  deploy.sh
src/vike_trader_app/: __init__.py  crash.py  logging_setup.py
src/vike_trader_app/ai/: __init__.py  agent.py  bugsnag.py  cli.py  connect.py  knowledge.py  llm.py  mcp_server.py  services.py  symbol_suggest.py  telemetry.py  workspace.py
src/vike_trader_app/analysis/: __init__.py  alerts.py  allocation.py  benchmark.py  bias.py  calculators.py  excursions.py  heatmap.py  indicator_catalog.py  interactive.py  journal.py  metrics.py  montecarlo.py  optimizer.py  overfit.py  periods.py  persistence.py  pine.py  recorder.py  report.py  report_extras.py  samplers.py  screener.py  search.py  significance.py  stability.py  strategy_templates.py  surface.py  tearsheet.py  validation.py  walkforward.py
src/vike_trader_app/cli/: __init__.py
src/vike_trader_app/core/: __init__.py  bar_buffer.py  broker_sim.py  chart_transforms.py  compat_strategy.py  consolidator.py  engine.py  fastsim.py  fill.py  fill_model.py  fill_njit.py  fill_resolution.py  forward.py  instrument_id.py  model.py  multi_symbol_engine.py  order_handle.py  order_intent.py  order_router.py  orders.py  paper.py  portfolio.py  portfolio_adapter.py  portfolio_fastsim.py  schedule.py  signal_strategy.py  single_symbol_engine.py  sizing.py  strategy.py  strategy_engine.py  strategy_loader.py  tick_backtest.py  ticks.py  timeframe.py  vectorized.py
src/vike_trader_app/data/: __init__.py  binance_source.py  binance_ticks.py  bybit_source.py  cache.py  catalog.py  coinbase_source.py  csv_import.py  datasets.py  duck_catalog.py  dukascopy_source.py  event_providers_config.py  exec_db.py  instrument_db.py  instruments.py  kraken_source.py  live_update.py  membership.py  okx_source.py  parallel_read.py  parquet_source.py  partition.py  polling_feed.py  prefs.py  provider_chain.py  provider_settings.py  providers_config.py  quality.py  rest.py  retry.py  rollup.py  rows.py  sources.py  state_db.py  store.py  streaming_providers_config.py  symbol_mappings.py  tick_store.py  vike_live.py  vike_source.py  (+1 more)
src/vike_trader_app/exec/: __init__.py  accounting.py  arm_select.py  arm_spec.py  bus.py  coid.py  conditionals.py  credentials.py  crypto_client.py  events.py  live_oms.py  live_portfolio_engine.py  live_portfolio_pump.py  live_strategy_pump.py  live_symbol_shim.py  oms.py  order.py  order_ticket.py  portfolio.py  positions_view.py  risk.py  signer.py  sim_client.py  sim_exchange.py  strategy_event_adapter.py  strategy_live_engine.py  user_data_core.py  venue_config.py
src/vike_trader_app/ml/: __init__.py  dataset.py  strategy.py  walkforward.py
src/vike_trader_app/tester/: __init__.py  backtester.py  config.py  optimize.py  optimize_job.py  parallel.py  portfolio_tester.py  report.py  strategy_tester.py  walkforward.py
src/vike_trader_app/ui/: __init__.py  alerts.py  app.py  bots_panel.py  calendar_delegate.py  chart.py  chart_styles.py  chartdata.py  chartdoc.py  chartwin.py  command_palette.py  country_dialog.py  dashboard_data.py  dashtiles.py  dashtiles_data.py  dataload.py  datamanager.py  datamanager_data.py  dataset_editor.py  dataset_panel.py  dataset_tree.py  dialogs.py  dockshell.py  dropdowns.py  economic_calendar.py  editor.py  equity_calendar.py  event_providers_panel.py  exec_arm.py  flowlayout.py  fuzzy.py  icons.py  indicators.py  journal.py  launcher.py  linkbus.py  live_feed_worker.py  live_strategy_bar.py  menus.py  minrail.py  (+29 more)
tests/: conftest.py  test_ai_agent.py  test_ai_knowledge.py  test_ai_llm.py  test_ai_mcp.py  test_ai_services.py  test_alerts.py  test_alerts_gui.py  test_allocation.py  test_analytics_phase3.py  test_benchmark.py  test_binance_source.py  test_bots_panel.py  test_broker_sim.py  test_cache.py  test_calendar_actuals_more.py  test_calendar_equity.py  test_calendar_forexfactory.py  test_calendar_fred.py  test_calendar_model.py  test_calendar_repository.py  test_calmar_guard.py  test_catalog.py  test_chart_indicators.py  test_chart_space.py  test_chart_styles_gui.py  test_chart_transforms.py  test_chartdata.py  test_connect.py  test_cross_sectional.py  test_csv_import.py  test_data_studio_wiring_gui.py  test_datamanager_data.py  test_datamanager_gui.py  test_datamanager_inactive.py  test_dataset_editor_gui.py  test_dataset_panel_gui.py  test_dataset_tree_gui.py  test_datasets.py  test_duck_catalog.py  (+117 more)
tests/bench/: test_bench_engine.py
tests/fixtures/: ff_calendar_thisweek.json
tests/gui/chart/: test_chart_indicators.py  test_chart_markers.py  test_chart_styles_gui.py  test_chart_toolbar_responsive_gui.py  test_chart_user_sim.py  test_chartdata.py  test_offthread_chart_load.py  test_price_axis_chip.py  test_style_favorites_gui.py  test_style_icons_gui.py  test_windowing.py
tests/gui/exec/: test_app_live_exec_binance_gui.py  test_app_live_exec_binance_perp_gui.py  test_app_live_exec_bybit_gui.py  test_app_live_exec_bybit_perp_gui.py  test_app_live_exec_deribit_gui.py  test_app_live_exec_okx_gui.py  test_app_live_exec_okx_perp_gui.py  test_app_live_gating_gui.py  test_app_option_pick_arm_gui.py  test_basket_arm.py  test_basket_worker_clock.py  (+15 more)
tests/live/: README.md  verify_arrange.py  verify_linkmenu.py  verify_s7_floating_windows.py  verify_shell.py  verify_shell_recheck.py  verify_style_icons.py  verify_tiles.py  verify_titlebar.py
tests/perf/: bench_sweep.py  test_perf_invariant.py
(+430 files in other folders)
