[project]
name = "vike-trader-app"
version = "0.0.0"
description = "Python-native, crypto-first backtesting & forward-testing platform (visual desktop + headless CLI)."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "polars>=1.0",
    "pyarrow>=16",
    "numpy>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = ["pyside6>=6.7", "pyqtgraph>=0.13", "duckdb>=1.0"]  # duckdb: fast DuckCatalog (stats-only) for the Data manager — without it the catalog scan falls back to a slow Polars full-read that freezes the Data space (~13s). The standalone `duck` extra below remains for headless installs.
options = ["yfinance>=0.2"]  # stock/index options chain backend (data/options/yfinance.py); lazy-imported
cli = ["typer>=0.12"]
analysis = ["skfolio>=0.6", "scikit-learn>=1.5"]
fast = ["numba>=0.63"]  # compiled sweep fast-path (core/vectorized.py); numpy fallback when absent
opt = ["optuna>=3"]     # TPE/CMA-ES optimizer backend (analysis/search.py); GA fallback when absent
viz = ["plotly>=5"]     # interactive HTML tearsheet (analysis/interactive.py); static SVG otherwise
live = ["websockets>=12"]  # push WebSocket feed (data/vike_live.py); PollingBarFeed needs no dep
duck = ["duckdb>=1.0"]  # columnar read/resample engine (data/duck_catalog.py); Catalog needs no dep
mcp = ["mcp>=1.2"]
ai = ["fastembed>=0.3", "rank-bm25>=0.2", "anthropic>=0.40"]

[dependency-groups]
dev = ["pytest>=8", "pytest-timeout>=2", "ruff>=0.6"]

[project.scripts]
vike-trader-app = "vike_trader_app.cli.main:app"      # CLI — implemented in Phase 2
vike-trader-app-gui = "vike_trader_app.ui.app:main"   # visual backtester (desktop)
vike-mcp = "vike_trader_app.ai.mcp_server:main"
vike-chat = "vike_trader_app.ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vike_trader_app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# Dump every thread's traceback if a single test hangs >120s (built-in faulthandler) — turns a
# silent CI hang into a pinpointed stack. pytest-timeout (dev) also fails the test itself.
faulthandler_timeout = 120
