[project]
name = "vike-trader-app"
version = "0.0.0"
description = "Python-native, crypto-first backtesting & forward-testing platform (visual desktop + headless CLI)."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "polars>=1.0",
    "pyarrow>=16",
    "numpy>=2.0,<2.5",  # upper-capped for numba: numba (latest 0.65.1) hard-requires NumPy<=2.4; without the cap, numpy 2.5 installs and the @njit fast paths (fastsim/vectorized) silently fall back to plain Python
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = ["pyside6>=6.7", "pyqtgraph>=0.13", "duckdb>=1.0", "PySide6-QtAds>=4.5", "yfinance>=0.2"]  # duckdb: fast DuckCatalog (stats-only) for the Data manager — without it the catalog scan falls back to a slow Polars full-read that freezes the Data space (~13s). The standalone `duck` extra below remains for headless installs. PySide6-QtAds: the dockable shell (ui/dockshell.py). yfinance: the Options tool exposes a Yahoo Finance source, so it ships with the UI (else switching to it errors "No module named 'yfinance'").
options = ["yfinance>=0.2"]  # stock/index options chain backend (data/options/yfinance.py); lazy-imported. Kept for headless/back-compat installs; the UI now bundles it via the `ui` extra above.
cli = ["typer>=0.12"]
analysis = ["skfolio>=0.6", "scikit-learn>=1.5"]
fast = ["numba>=0.63"]  # compiled sweep fast-path (core/vectorized.py); numpy fallback when absent
opt = ["optuna>=3"]     # TPE/CMA-ES optimizer backend (analysis/search.py + samplers.py); GA fallback when absent
viz = ["plotly>=5"]     # interactive HTML tearsheet (analysis/interactive.py); static SVG otherwise
viz3d = ["pyopengl>=3.1"]  # 3D optimization surface via pyqtgraph.opengl (ui/studio.py Surface tab); 2D ImageView fallback when absent
live = ["websockets>=12"]  # push WebSocket feed (data/vike_live.py); PollingBarFeed needs no dep
duck = ["duckdb>=1.0"]  # columnar read/resample engine (data/duck_catalog.py); Catalog needs no dep
mcp = ["mcp>=1.2"]
ai = ["fastembed>=0.3", "rank-bm25>=0.2", "anthropic>=0.40"]
sandbox = ["pyseccomp>=0.1.2; sys_platform == 'linux'"]  # activates the in-child seccomp denylist (core/sandbox/harden.py) on Linux; netns + rlimits + timeout still confine without it. Verified working on Ubuntu 24.04 (libseccomp.so.2 ships by default).

[dependency-groups]
dev = ["pytest>=8", "pytest-timeout>=2", "pytest-xdist>=3", "ruff>=0.6", "pytest-benchmark>=5"]

[project.scripts]
vike-trader-app = "vike_trader_app.cli.main:app"      # CLI — implemented in Phase 2
vike-trader-app-gui = "vike_trader_app.ui.launcher:main"   # desktop GUI; thin launcher defers the heavy import so optimizer workers don't re-import the whole UI stack
vike-mcp = "vike_trader_app.ai.mcp_server:main"
vike-chat = "vike_trader_app.ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vike_trader_app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
# Default to the fast, deterministic UNIT core (no Qt). The GUI suite MUST run in its own process
# (`pytest tests/gui -m "not network"`) — collecting unit + gui in ONE process imports the PySide6
# test modules into the unit run and corrupts a C extension (hard segfault, 0xC0000409). Splitting
# the run is the fix; see CLAUDE.md. Add `-n auto` (pytest-xdist) to run either subtree across
# all cores in separate processes — both subtrees are parallel-safe (~10 min GUI -> a few).
testpaths = ["tests/unit"]
# Dump every thread's traceback if a single test hangs >120s (built-in faulthandler) — turns a
# silent CI hang into a pinpointed stack. pytest-timeout (dev) also fails the test itself.
faulthandler_timeout = 120
# Markers (auto-applied in tests/conftest.py). Within a subtree, skip the live-network test with
#   pytest tests/gui -m "not network"
markers = [
    "gui: needs a Qt QApplication (offscreen); slower — auto-applied to *_gui.py and tests using an app/win fixture",
    "network: hits the live network (Binance/Yahoo/…); flaky and can segfault when fetched off-thread",
    "slow: long-running test",
    "teardown_repro: spawns a child interpreter that exercises an ADS/QThread teardown crash pattern and asserts on its EXIT CODE; serial-ish (each spins its own QApplication) and a couple of seconds each — opt OUT of the default parallel timing with `-m \"not teardown_repro\"` if a run is flaking on these.",
]
# Suppress DeprecationWarnings from the compat shim (SingleSymbolStrategy/PortfolioStrategy)
# — these are expected during the migration window and do not indicate test failures.
filterwarnings = [
    "ignore:.*SingleSymbolStrategy.*:DeprecationWarning",
    "ignore:.*PortfolioStrategy is deprecated.*:DeprecationWarning",
]
